manifests/cilium/components/talos/1.20.3/validatingadmissionpolicy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: gateway.cilium.io
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["gateway.networking.k8s.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["gateways"]
  validations:
    - expression: "object.spec.gatewayClassName != 'cilium' ||
        (has(object.spec.listeners)) &&
        object.spec.listeners.filter(e, has(e.tls) && has(e.tls.mode) && e.tls.mode == 'Terminate').all(e, e.tls.certificateRefs.size() == 1)"
      message: "cilium GatewayClass requires exactly one certificateRef per listener when tls.mode is Terminate."
      reason: Invalid
